@@ -228,6 +228,15 @@ process_file (FTS *fts, FTSENT *ent)
         error (0, 0, _("cannot operate on dangling symlink %s"),
                quote (file_full_name));
       ok = false;
+      break;
+
+    case FTS_DC:		/* directory that causes cycles */
+      if (cycle_warning_required (fts, ent))
+        {
+          emit_cycle_warning (file_full_name);
+          return false;
+        }
+      break;
 
     default:
       break;
